# docs/swagger.yaml
@@ -57,6 +57,17 @@ definitions:
       username:
         type: string
     type: object
+  entity.Rating:
+    properties:
+      avgRating:
+        description: Average rating
+        type: number
+      businessID:
+        description: Foreign key to Business
+        type: string
+      totalRatings:
+        type: integer
+    type: object
   entity.RegisterRequest:
     properties:
       email:
@@ -532,6 +543,31 @@ paths:
       summary: Get a category by ID
       tags:
       - categories
+  /rating/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get rating by business ID
+      parameters:
+      - description: Business ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Rating'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Get rating by business ID
+      tags:
+      - Rating
   /review:
     get:
       consumes:
