# internal/controller/http/v1/handlers/business.go
@@ -2,20 +2,10 @@ package handlers
 
 import (
 	"net/http"
-	"github.com/Javokhdev/Yelp-Project/internal/entity"
 
+	"github.com/Javokhdev/Yelp-Project/internal/entity"
 	"github.com/gin-gonic/gin"
 )
-
-type BusinessHandler struct {
-	businessService *services.BusinessService
-}
-
-func NewBusinessHandler(businessService *services.BusinessService) *BusinessHandler {
-	return &BusinessHandler{
-		businessService: businessService,
-	}
-}
 
 // Business godoc
 // @Summary      Create a new business
@@ -28,13 +18,13 @@ func NewBusinessHandler(businessService *services.BusinessService) *BusinessHand
 // @Failure      400  {object}  string
 // Failure      500  {object}  string
 // @Router       /business [post]
-func (handler *BusinessHandler) CreateBusiness(c *gin.Context) {
+func (h *Handler) CreateBusiness(c *gin.Context) {
 	var business entity.Business
 	if err := c.ShouldBindJSON(&business); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	businessID, err := handler.businessService.CreateBusiness(&business)
+	businessID, err := h.UseCase.BusinessRepo.CreateBusiness(c, &business)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -53,9 +43,9 @@ func (handler *BusinessHandler) CreateBusiness(c *gin.Context) {
 // @Failure      400  {object}  string
 // Failure      500  {object}  string
 // @Router       /business/{businessID} [get]
-func (handler *BusinessHandler) GetBusinessByID(c *gin.Context) {
+func (h *Handler) GetBusinessByID(c *gin.Context) {
 	businessID := c.Param("businessID")
-	business, err := handler.businessService.GetBusinessByID(businessID)
+	business, err := h.UseCase.BusinessRepo.GetBusinessByID(c,businessID)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -72,8 +62,8 @@ func (handler *BusinessHandler) GetBusinessByID(c *gin.Context) {
 // @Success      200  {object}  string "Succefully"
 // @Failure      400  {object}  string
 // @Router       /business [get]
-func (handler *BusinessHandler) GetAllBusinesses(c *gin.Context) {
-	businesses, err := handler.businessService.GetAllBusinesses()
+func (h *Handler) GetAllBusinesses(c *gin.Context) {
+	businesses, err := h.UseCase.BusinessRepo.GetAllBusinesses(c)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -92,13 +82,13 @@ func (handler *BusinessHandler) GetAllBusinesses(c *gin.Context) {
 // @Failure      400  {object}  string
 // @Failure      500  {object}  string
 // @Router       /business [put]
-func (handler *BusinessHandler) UpdateBusiness(c *gin.Context) {
+func (h *Handler) UpdateBusiness(c *gin.Context) {
 	var business entity.Business
 	if err := c.ShouldBindJSON(&business); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if err := handler.businessService.UpdateBusiness(&business); err != nil {
+	if err := h.UseCase.BusinessRepo.UpdateBusiness(c, &business); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
@@ -115,11 +105,11 @@ func (handler *BusinessHandler) UpdateBusiness(c *gin.Context) {
 // @Success      200  {object}  string "Succefully"
 // @Failure      400  {object}  string
 // @Router       /business/{businessID} [delete]
-func (handler *BusinessHandler) DeleteBusiness(c *gin.Context) {
+func (h *Handler) DeleteBusiness(c *gin.Context) {
 	businessID := c.Param("businessID")
-	if err := handler.businessService.DeleteBusiness(businessID); err != nil {
+	if err := h.UseCase.BusinessRepo.DeleteBusiness(c, businessID); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{"message": "Business deleted successfully"})
-}	
+}
