# internal/controller/http/v1/handlers/review&rating.go
@@ -7,16 +7,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type ReviewHandler struct {
-	reviewService services.ReviewAndRatingService
-}
-
-func NewReviewHandler(reviewService *services.ReviewAndRatingService) *ReviewHandler {
-	return &ReviewHandler{
-		reviewService: *reviewService,
-	}
-}
-
 // Review godoc
 // @Summary      Create a new review
 // @Description  Create a new review
@@ -27,13 +17,13 @@ func NewReviewHandler(reviewService *services.ReviewAndRatingService) *ReviewHan
 // @Success      200  {object}  entity.Review
 // @Failure      400  {object}  string
 // @Router       /review [post]
-func (r *ReviewHandler) CreateReview(c *gin.Context) {
+func (h *Handler) CreateReview(c *gin.Context) {
 	var review entity.Review
 	if err := c.ShouldBindJSON(&review); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	reviewID, err := r.reviewService.CreateReview(&review)
+	reviewID, err := h.UseCase.ReviewRepo.CreateReview(c, &review)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -50,8 +40,8 @@ func (r *ReviewHandler) CreateReview(c *gin.Context) {
 // @Success      200  {object}  []entity.Review
 // @Failure      400  {object}  string
 // @Router       /review [get]
-func (r *ReviewHandler) GetAllReviews(c *gin.Context) {
-	reviews, err := r.reviewService.GetAllReviews()
+func (h *Handler) GetAllReviews(c *gin.Context) {
+	reviews, err := h.UseCase.ReviewRepo.GetAllReviews(c)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -69,9 +59,9 @@ func (r *ReviewHandler) GetAllReviews(c *gin.Context) {
 // @Success      200  {object}  entity.Review
 // @Failure      400  {object}  string
 // @Router       /review/{id} [get]
-func (r *ReviewHandler) GetReviewByID(c *gin.Context) {
+func (h *Handler) GetReviewByID(c *gin.Context) {
 	reviewID := c.Param("id")
-	review, err := r.reviewService.GetReviewByID(reviewID)
+	review, err := h.UseCase.ReviewRepo.GetReviewByID(c, reviewID)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -89,13 +79,13 @@ func (r *ReviewHandler) GetReviewByID(c *gin.Context) {
 // @Success      200  {object}  entity.Review
 // @Failure      400  {object}  string
 // @Router       /review [put]
-func (r *ReviewHandler) UpdateReview(c *gin.Context) {
+func (h *Handler) UpdateReview(c *gin.Context) {
 	var review entity.Review
 	if err := c.ShouldBindJSON(&review); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if err := r.reviewService.UpdateReview(&review); err != nil {
+	if err := h.UseCase.ReviewRepo.UpdateReview(c, &review); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
@@ -112,11 +102,31 @@ func (r *ReviewHandler) UpdateReview(c *gin.Context) {
 // @Success      200  {object}  entity.Review
 // @Failure      400  {object}  string
 // @Router       /review/{id} [delete]
-func (r *ReviewHandler) DeleteReview(c *gin.Context) {
+func (h *Handler) DeleteReview(c *gin.Context) {
 	reviewID := c.Param("id")
-	if err := r.reviewService.DeleteReview(reviewID); err != nil {
+	if err := h.UseCase.ReviewRepo.DeleteReview(c, reviewID); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{"message": "Review deleted successfully"})
+}
+
+//Rating godoc
+// @Summary      Get rating by business ID
+// @Description  Get rating by business ID
+// @Tags         Rating
+// @Accept       json
+// @Produce      json
+// @Param        id  path      string  true  "Business ID"
+// @Success      200  {object}  entity.Rating
+// @Failure      400  {object}  string
+// @Router       /rating/{id} [get]
+func (h *Handler) GetRatingByBusinessID(c *gin.Context) {
+	businessID := c.Param("id")
+	rating, err := h.UseCase.ReviewRepo.GetRatingByBusinessID(c, businessID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, rating)
 }
